# AI_Game

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  ComputerPlayer.cpp  ComputerPlayer.h  Game.cpp  Game.h  HumanPlayer.cpp  HumanPlayer.h  NetworkPlayer.cpp  NetworkPlayer.h  Player.cpp  Player.h  main.cpp  socketClient.cpp
Players/: ComputerPlayer.cpp  ComputerPlayer.h  HumanPlayer.h  NetworkPlayer.cpp  NetworkPlayer.h  Player.cpp  Player.h
Utils/: State.h
utils/: State.cpp
